# load-simpla-annotations

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
examples/: download_images.ipynb
