[project]
name = "load-simpla-annotations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.14",
    "matplotlib>=3.10.5",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
]

[project.optional-dependencies]
notebooks = [
    "jupyter>=1.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]
